--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.WhatsappClone">
-        <activity android:name=".PhoneNumberActivity">
+        <activity android:name=".setUpProfileActivity"></activity>
+        <activity android:name=".PhoneNumberActivity" />
+        <activity android:name=".otp_screen" />
+        <activity android:name=".login"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".otp_screen" />
-        <activity android:name=".login">
-        </activity>
-        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
